# uhill_elementary_grocery_card_fundraiser

./: .gitignore  README.md  assign_serial_numbers_envelopes.py  assign_serial_numbers_envelopes_test.py  envelope_mail_merge.py  envelope_mail_merge_test.py  grocery_card_fundraiser.ipynb  pyproject.toml
test_data/: assigned_envelopes.xlsx  sample_envelopes.xlsx  sample_serial_numbers.xlsx
